--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "logfire>=4.24.0",
+    "fastapi>=0.129.0",
+    "logfire[fastapi]>=4.24.0",
+    "uvicorn[standard]>=0.30.0",
 ]
